--- a/publications/index.html
+++ b/publications/index.html
@@ -231,7 +231,7 @@ Digitalization for smart farming and forestry</em>, 2022, pp.
 <p><span class="citation" data-cites="2022-OAGM-Sauzeau">Y. Sauzeau, W.
 Kropatsch, and J. Hladůvka. Modeling the diffusion of <span
 class="math inline"><em>C</em><em>O</em><sub>2</sub></span> inside
-leaves, in <em>AAPR workshop: Digitalization for smart farming and
+leaves, in <em>OAGM workshop: Digitalization for smart farming and
 forestry</em>, 2022, pp. 70–72.</span></p>
 <p><span class="citation" data-cites="2022-OAGM-Palmrich">A. Palmrich,
 K. Voggeneder, D. Tholen, G. Theroux-Rancourt, J. Hladůvka, and W.
@@ -300,7 +300,7 @@ in Clinic: A Grand Challange, 2008.</span></p>
 Hladůvka, A. Kanitsar, and K. Bühler. Shape and appearance models for
 automatic coronary artery tracking, <em>The MIDAS Journal</em>, Jul.
 2008, DOI:<a href="https://doi.org/10.54294/l78zbl"
-role="doc-biblioref">https://doi.org/10.54294/l78zbl</a>.</span></p>
+role="doc-biblioref">10.54294/l78zbl</a>.</span></p>
 <p><span class="citation" data-cites="Zambal-2008-Entropy">S. Zambal, K.
 Bühler, and J. Hladůvka. Entropy-optimized texture models, in
 <em>Proceedings of medical image computing and computer–assisted
@@ -322,7 +322,7 @@ Zambal, J. Hladůvka, and K. Bühler. Improving segmentation of the left
 ventricle using a two-component statistical model, in <em>Proceedings of
 medical image computing and computer–assisted intervention</em>, 2006,
 pp. 151–158, DOI:<a href="https://doi.org/10.1007/11866565_19"
-role="doc-biblioref">https://doi.org/10.1007/11866565_19</a>.</span></p>
+role="doc-biblioref">10.1007/11866565_19</a>.</span></p>
 <p><span class="citation" data-cites="Hladuvka-2005-MDL">J. Hladůvka and
 K. Bühler. <span>MDL</span> spline models: Gradients and polynomial
 reparameterisations, in <em>Proceedings of british machine vision
