Viszegrad abstract added..

--- a/publications/index.html
+++ b/publications/index.html
@@ -169,7 +169,7 @@
 </header>
 <!-- # Publications of Jiri Hladuvka -->
 <!-- title will be produced by pandoc -->
-<p>updated on 16.3.2023</p>
+<!-- updated on 16.3.2023 -->
 <h2 id="articles-in-journals">Articles in Journals</h2>
 <!-- at PRIP -->
 <p><span class="citation" data-cites="Jakaite-2021-NatureSciRep">L.
@@ -362,6 +362,71 @@ visualization, and computer vision</em>, 2001, pp. 124–129.</span></p>
 A. König, and E. Gröller. Curvature-based transfer functions for direct
 volume rendering, in <em>Spring conference on computer graphics</em>,
 2000, pp. 58–65.</span></p>
+<h2 id="posters-and-abstracts">Posters and Abstracts</h2>
+<p><span class="citation" data-cites="Favero-2023-Visegrad">M. Jobst, L.
+Gruber, J. Hladůvka, C. Gerner, and G. D. Favero. Unraveling the secrets
+of cell motility: From images to -omics with the help of bioinformatics,
+in <em>11th <span>V</span>isegrad symposium on biomolecular
+interactions</em>, 2023.</span></p>
+<p><span class="citation" data-cites="XXX-2017-1">T. Haftner, R. Ljuhar,
+H. P. D. D. Ljuhar, J. Hladůvka, and S. Nehrer. Combining radiographic
+texture parameters increases tibiofemoral osteoarthritis detection
+accuracy: Data from the osteoarthritis initiative, <em>Osteoarthritis
+and Cartilage</em>, vol. 25, p. 261, Apr. 2017, DOI:<a
+href="https://doi.org/10.1016/j.joca.2017.02.437"
+role="doc-biblioref">10.1016/j.joca.2017.02.437</a>.</span></p>
+<p><span class="citation" data-cites="XXX-2016-8">R. Ljuhar, B. Norman,
+D. Ljuhar, T. Haftner, J. Hladůvka, M. B. T. Mai, H. Canhăo, J. C.
+Branco, A. Rodrigues, N. Gouveia, S. Nehrer, A. Fahrleitner-Pammer, and
+H. P. Dimai. A novel feature selection algorithm based on bone micro
+architecture analysis to identify osteoarthritis, <em>Annals of the
+Rheumatic Diseases</em>, vol. 75, no. 2, pp. 637–638, Jun.
+2016.</span></p>
+<p><span class="citation" data-cites="XXX-2016-7">R. Ljuhar, S. Nehrer,
+B. Norman, D. Ljuhar, T. Haftner, J. Hladůvka, M. B. T. Mai, H. Canhăo,
+J. C. Branco, A. Rodrigues, N. Gouveia, A. Fahrleitner-Pammer, and H. P.
+Dimai. A clinical study to examine thresholds of joint space width and
+joint space area for identification of knee osteoarthritis, <em>Annals
+of the Rheumatic Diseases</em>, vol. 75, no. 2, p. 871, Jun.
+2016.</span></p>
+<p><span class="citation" data-cites="XXX-2016-4">R. Ljuhar, B. Norman,
+D. Ljuhar, T. Haftner, J. Hladůvka, H. Canhăo, J. C. Branco, A.
+Rodrigues, N. Gouveia, S. Nehrer, A. Fahrleitner-Pammer, and H. P.
+Dimai. A novel method for the assessment of knee joint space width and
+subchondral bone micro architecture, <em>Osteoarthritis and
+Cartilage</em>, vol. 24, p. 397, Apr. 2016, DOI:<a
+href="https://doi.org/10.1016/j.joca.2016.01.677"
+role="doc-biblioref">10.1016/j.joca.2016.01.677</a>.</span></p>
+<p><span class="citation" data-cites="XXX-2016-3">R. Ljuhar, B. Norman,
+D. Ljuhar, S. Nehrer, M. Riedl, J. Hladůvka, F. Stiassny, C. Wetzel, and
+C. Westhauser. Computer-assisted diagnosis and monitoring of
+degenerative bone diseases, <em>Osteoarthritis and Cartilage</em>, vol.
+24, p. 319, Apr. 2016, DOI:<a
+href="https://doi.org/10.1016/j.joca.2016.01.570"
+role="doc-biblioref">10.1016/j.joca.2016.01.570</a>.</span></p>
+<p><span class="citation" data-cites="PB-VRVis-2014-032">A. Enkhbayar,
+B. Norman, R. Ljuhar, and J. Hladůvka. Automated <span>ROI</span>
+placement in high-resolution radiographs of calcaneus, in <em>Poster at
+the eurographics workshop on visual computing for biology and
+medicine</em>, 2014.</span></p>
+<p><span class="citation" data-cites="PB-VRVis-2013-011">D. Major, J.
+Hladůvka, and K. Bühler. Automated labeling framework applied on full
+and partial spine <span>CT</span> scans, in <em>Abstract and
+presentation at ECR</em>, 2013.</span></p>
+<p><span class="citation" data-cites="PB-VRVis-2013-006">K. Bühler, D.
+Major, J. Hladůvka, and R. Wegenkittl. Towards instant computational
+support for interactive diagnosis, <em>ECR Today</em>, Mar.
+2013.</span></p>
+<p><span class="citation" data-cites="PB-VRVis-2012-043">D. Major, F.
+Schulze, J. Hladůvka, and K. Bühler. Highly optimized landmark
+localization in medical images, <em>Poster in Proceedings of ICVSS</em>,
+2012.</span></p>
+<!-- @Hladuvka-1998-MI -->
+<!-- @Hladuvka-1997-SCCG -->
+<!-- @Hladuvka-1996-SVK -->
+<!-- @Hladuvka-1996-SCCG -->
+<!-- @Hladuvka-1995-INC -->
+<!-- @Hladuvka-1994-FVP -->
 <h2 id="theses">Theses</h2>
 <p><span class="citation" data-cites="Hladuvka-2001-PhD">J. Hladůvka.
 Derivatives and eigensystems for volume-data analysis and visualization,
@@ -515,65 +580,5 @@ A. König, and E. Gröller. Curvature-based transfer functions for direct
 volume rendering, Institute of Computer Graphics 186-2, Vienna
 University of Technology, Vienna, Austria, TR-186-2-00-01, Jan.
 2000.</span></p>
-<h2 id="posters-and-abstracts">Posters and Abstracts</h2>
-<p><span class="citation" data-cites="XXX-2017-1">T. Haftner, R. Ljuhar,
-H. P. D. D. Ljuhar, J. Hladůvka, and S. Nehrer. Combining radiographic
-texture parameters increases tibiofemoral osteoarthritis detection
-accuracy: Data from the osteoarthritis initiative, <em>Osteoarthritis
-and Cartilage</em>, vol. 25, p. 261, Apr. 2017, DOI:<a
-href="https://doi.org/10.1016/j.joca.2017.02.437"
-role="doc-biblioref">10.1016/j.joca.2017.02.437</a>.</span></p>
-<p><span class="citation" data-cites="XXX-2016-8">R. Ljuhar, B. Norman,
-D. Ljuhar, T. Haftner, J. Hladůvka, M. B. T. Mai, H. Canhăo, J. C.
-Branco, A. Rodrigues, N. Gouveia, S. Nehrer, A. Fahrleitner-Pammer, and
-H. P. Dimai. A novel feature selection algorithm based on bone micro
-architecture analysis to identify osteoarthritis, <em>Annals of the
-Rheumatic Diseases</em>, vol. 75, no. 2, pp. 637–638, Jun.
-2016.</span></p>
-<p><span class="citation" data-cites="XXX-2016-7">R. Ljuhar, S. Nehrer,
-B. Norman, D. Ljuhar, T. Haftner, J. Hladůvka, M. B. T. Mai, H. Canhăo,
-J. C. Branco, A. Rodrigues, N. Gouveia, A. Fahrleitner-Pammer, and H. P.
-Dimai. A clinical study to examine thresholds of joint space width and
-joint space area for identification of knee osteoarthritis, <em>Annals
-of the Rheumatic Diseases</em>, vol. 75, no. 2, p. 871, Jun.
-2016.</span></p>
-<p><span class="citation" data-cites="XXX-2016-4">R. Ljuhar, B. Norman,
-D. Ljuhar, T. Haftner, J. Hladůvka, H. Canhăo, J. C. Branco, A.
-Rodrigues, N. Gouveia, S. Nehrer, A. Fahrleitner-Pammer, and H. P.
-Dimai. A novel method for the assessment of knee joint space width and
-subchondral bone micro architecture, <em>Osteoarthritis and
-Cartilage</em>, vol. 24, p. 397, Apr. 2016, DOI:<a
-href="https://doi.org/10.1016/j.joca.2016.01.677"
-role="doc-biblioref">10.1016/j.joca.2016.01.677</a>.</span></p>
-<p><span class="citation" data-cites="XXX-2016-3">R. Ljuhar, B. Norman,
-D. Ljuhar, S. Nehrer, M. Riedl, J. Hladůvka, F. Stiassny, C. Wetzel, and
-C. Westhauser. Computer-assisted diagnosis and monitoring of
-degenerative bone diseases, <em>Osteoarthritis and Cartilage</em>, vol.
-24, p. 319, Apr. 2016, DOI:<a
-href="https://doi.org/10.1016/j.joca.2016.01.570"
-role="doc-biblioref">10.1016/j.joca.2016.01.570</a>.</span></p>
-<p><span class="citation" data-cites="PB-VRVis-2014-032">A. Enkhbayar,
-B. Norman, R. Ljuhar, and J. Hladůvka. Automated <span>ROI</span>
-placement in high-resolution radiographs of calcaneus, in <em>Poster at
-the eurographics workshop on visual computing for biology and
-medicine</em>, 2014.</span></p>
-<p><span class="citation" data-cites="PB-VRVis-2013-011">D. Major, J.
-Hladůvka, and K. Bühler. Automated labeling framework applied on full
-and partial spine <span>CT</span> scans, in <em>Abstract and
-presentation at ECR</em>, 2013.</span></p>
-<p><span class="citation" data-cites="PB-VRVis-2013-006">K. Bühler, D.
-Major, J. Hladůvka, and R. Wegenkittl. Towards instant computational
-support for interactive diagnosis, <em>ECR Today</em>, Mar.
-2013.</span></p>
-<p><span class="citation" data-cites="PB-VRVis-2012-043">D. Major, F.
-Schulze, J. Hladůvka, and K. Bühler. Highly optimized landmark
-localization in medical images, <em>Poster in Proceedings of ICVSS</em>,
-2012.</span></p>
-<!-- @Hladuvka-1998-MI -->
-<!-- @Hladuvka-1997-SCCG -->
-<!-- @Hladuvka-1996-SVK -->
-<!-- @Hladuvka-1996-SCCG -->
-<!-- @Hladuvka-1995-INC -->
-<!-- @Hladuvka-1994-FVP -->
 </body>
 </html>
