--- a/publications/index.html
+++ b/publications/index.html
@@ -226,24 +226,30 @@ role="doc-biblioref">10.1007/978-3-031-23028-8_20</a>.</span></p>
 <p><span class="citation" data-cites="2022-OAGM-Banaeyan">M. Banaeyan,
 W. G. Kropatsch, and J. Hladůvka. Redundant 1-cells in multi-labeled
 <span>2-Gmap</span> irregular pyramids, in <em>OAGM workshop:
-Digitalization for smart farming and forestry</em>, 2022, pp.
-5–11.</span></p>
+Digitalization for smart farming and forestry</em>, 2022, pp. 5–11,
+DOI:<a href="https://doi.org/10.3217/978-3-85125-954-4-01"
+role="doc-biblioref">10.3217/978-3-85125-954-4-01</a>.</span></p>
 <p><span class="citation" data-cites="2022-OAGM-Sauzeau">Y. Sauzeau, W.
 Kropatsch, and J. Hladůvka. Modeling the diffusion of <span
 class="math inline"><em>C</em><em>O</em><sub>2</sub></span> inside
 leaves, in <em>OAGM workshop: Digitalization for smart farming and
-forestry</em>, 2022, pp. 70–72.</span></p>
+forestry</em>, 2022, pp. 70–72, DOI:<a
+href="https://doi.org/10.3217/978-3-85125-954-4-11"
+role="doc-biblioref">10.3217/978-3-85125-954-4-11</a>.</span></p>
 <p><span class="citation" data-cites="2022-OAGM-Palmrich">A. Palmrich,
 K. Voggeneder, D. Tholen, G. Theroux-Rancourt, J. Hladůvka, and W.
 Kropatsch. An unsupervised, shape-based <span>3D</span> cell instance
 segmentation method for plant tissues, in <em>OAGM workshop:
-Digitalization for smart farming and forestry</em>, 2022, pp.
-54–59.</span></p>
+Digitalization for smart farming and forestry</em>, 2022, pp. 54–59,
+DOI:<a href="https://doi.org/10.3217/978-3-85125-954-4-08"
+role="doc-biblioref">10.3217/978-3-85125-954-4-08</a>.</span></p>
 <p><span class="citation" data-cites="2022-OAGM-Grexova">R. Grexová, K.
 Voggeneder, D. Tholen, G. Theroux-Rancourt, W. Kropatsch, and J.
 Hladůvka. Towards uncertainty detection in automated leaf tissue
 segmentation, in <em>OAGM workshop: Digitalization for smart farming and
-forestry</em>, 2022, pp. 47–53.</span></p>
+forestry</em>, 2022, pp. 47–53, DOI:<a
+href="https://doi.org/10.3217/978-3-85125-954-4-07"
+role="doc-biblioref">10.3217/978-3-85125-954-4-07</a>.</span></p>
 <p><span class="citation" data-cites="Bogner-2022-DGMM">F. Bogner, J.
 Hladůvka, and W. G. Kropatsch. Implicit encoding and
 simplification/reduction of <span class="nocase">nGmaps</span>, in
