After bib file cleaning + automated date.

--- a/publications/index.html
+++ b/publications/index.html
@@ -166,10 +166,9 @@
 <body>
 <header id="title-block-header">
 <h1 class="title">Publications of Jiří Hladůvka</h1>
+<p class="date">updated on February 9, 2024</p>
 </header>
-<!-- # Publications of Jiří Hladůvka -->
-<!-- title will be produced by pandoc -->
-<p>updated on 8.1.2024</p>
+<!-- title and date will be produced by pandoc -->
 <h2 id="articles-in-journals">Articles in Journals</h2>
 <!-- at PRIP -->
 <p><span class="citation" data-cites="Jakaite-2021-NatureSciRep">L.
@@ -191,8 +190,8 @@ role="doc-biblioref">10.1109/TMI.2018.2806086</a>.</span></p>
 Hladůvka, F. Schulze, and K. Bühler. Automated landmarking and labeling
 of fully and partially scanned spinal columns in <span>CT</span> images,
 <em>Medical Image Analysis</em>, vol. 17, no. 8, pp. 1151–1163, 2013,
-DOI:<a href="https://doi.org/10.1016/j.media.2013.07.005"
-role="doc-biblioref">10.1016/j.media.2013.07.005</a>.</span></p>
+DOI:<a href="https://doi.org/10.1016/J.MEDIA.2013.07.005"
+role="doc-biblioref">10.1016/J.MEDIA.2013.07.005</a>.</span></p>
 <p><span class="citation" data-cites="Bruckner-2009-BrainGazer">S.
 Bruckner, V. Šoltészová, E. Gröller, J. Hladůvka, K. Bühler, J. Y. Yu,
 and B. J. Dickson. BrainGazer – visual queries for neurobiology
@@ -219,7 +218,7 @@ Conferences</h2>
 <p><span class="citation" data-cites="Hladuvka-2024-DGMM">J. Hladůvka
 and W. G. Kropatsch. Fitting egg-shapes to discretized object
 boundaries, in <em>Discrete geometry and mathematical morphology</em>,
-2024, pp. 1–12 (to appear).</span></p>
+2024, pp. 1–13 (to appear).</span></p>
 <p><span class="citation" data-cites="Banaeyan-2022-SSPR">M. Banaeyan,
 C. Carratù, W. G. Kropatsch, and J. Hladůvka. Fast distance transforms
 in graphs and in <span>G</span>maps, in <em>IAPR joint international
@@ -274,10 +273,9 @@ href="https://doi.org/10.1007/978-3-030-29888-3_29"
 role="doc-biblioref">10.1007/978-3-030-29888-3_29</a>.</span></p>
 <p><span class="citation" data-cites="Kniaz-2018-ThermalGAN">V. V.
 Kniaz, V. A. Knyaz, J. Hladůvka, W. G. Kropatsch, and V. A. Mizginov.
-<span class="nocase">ThermalGAN: Multimodal Color-to-Thermal Image
-Translation for Person Re-Identification in Multispectral
-Dataset</span>, in <em><span>Computer Vision – ECCV 2018
-Workshops</span></em>, 2019, pp. 606–624, DOI:<a
+ThermalGAN: Multimodal color-to-thermal image translation for person
+re-identification in multispectral dataset, in <em>Computer vision –
+ECCV 2018 workshops</em>, 2019, pp. 606–624, DOI:<a
 href="https://doi.org/10.1007/978-3-030-11024-6_46"
 role="doc-biblioref">10.1007/978-3-030-11024-6_46</a>.</span></p>
 <!-- at VRVIS -->
@@ -292,8 +290,8 @@ role="doc-biblioref">10.1109/ISBI.2016.7493235</a>.</span></p>
 Novikov, M. Wimmer, J. Hladůvka, and K. Bühler. Automated slice-based
 artery identification in various field-of-view <span>CTA</span> scans,
 in <em>Eurographics workshop on visual computing for biology and
-medicine</em>, 2015, DOI:<a href="https://doi.org/10.2312/vcbm.20151215"
-role="doc-biblioref">10.2312/vcbm.20151215</a>.</span></p>
+medicine</em>, 2015, DOI:<a href="https://doi.org/10.2312/VCBM.20151215"
+role="doc-biblioref">10.2312/VCBM.20151215</a>.</span></p>
 <p><span class="citation" data-cites="Hladuvka-2015-BoneProfiles">J.
 Hladůvka, D. Major, and K. Bühler. Bone profiles: Simple, fast, and
 reliable spine localization in <span>CT</span> scans, in <em>Recent
@@ -339,12 +337,14 @@ reparameterisations, in <em>Proceedings of british machine vision
 conference</em>, 2005, vol. 2, pp. 869–878.</span></p>
 <!-- at ICGA -->
 <p><span class="citation" data-cites="Hladuvka-2002-Vis">A. Kanitsar, T.
-Theußl, L. Mroz, M. Šrámek, A. V. i Bartolı́, B. Csébfalvi, J. Hladůvka,
+Theußl, L. Mroz, M. Šrámek, A. V. i Bartolí, B. Csébfalvi, J. Hladůvka,
 D. Fleischmann, M. Knapp, R. Wegenkittl, P. Felkel, S. Röttger, S.
 Guthe, W. Purgathofer, and E. Gröller. Christmas tree case study:
 Computed tomography as a tool for mastering complex real world objects
 with applications in computer graphics., in <em>Proceedings of IEEE
-visualization</em>, 2002, pp. 489–492.</span>
+visualization</em>, 2002, pp. 489–492, DOI:<a
+href="https://doi.org/10.1109/VISUAL.2002.1183812"
+role="doc-biblioref">10.1109/VISUAL.2002.1183812</a>.</span>
 <!-- Xmas tree study --></p>
 <p><span class="citation" data-cites="Hladuvka-2002-Dagstuhl">T. Theußl,
 T. Möller, J. Hladůvka, and E. Gröller. Reconstruction issues in volume
@@ -389,17 +389,17 @@ H. P. D. D. Ljuhar, J. Hladůvka, and S. Nehrer. Combining radiographic
 texture parameters increases tibiofemoral osteoarthritis detection
 accuracy: Data from the osteoarthritis initiative, <em>Osteoarthritis
 and Cartilage</em>, vol. 25, p. 261, Apr. 2017, DOI:<a
-href="https://doi.org/10.1016/j.joca.2017.02.437"
-role="doc-biblioref">10.1016/j.joca.2017.02.437</a>.</span></p>
+href="https://doi.org/10.1016/J.JOCA.2017.02.437"
+role="doc-biblioref">10.1016/J.JOCA.2017.02.437</a>.</span></p>
 <p><span class="citation" data-cites="XXX-2016-8">R. Ljuhar, B. Norman,
-D. Ljuhar, T. Haftner, J. Hladůvka, M. B. T. Mai, H. Canhăo, J. C.
+D. Ljuhar, T. Haftner, J. Hladůvka, M. B. T. Mai, H. Canhão, J. C.
 Branco, A. Rodrigues, N. Gouveia, S. Nehrer, A. Fahrleitner-Pammer, and
 H. P. Dimai. A novel feature selection algorithm based on bone micro
 architecture analysis to identify osteoarthritis, <em>Annals of the
 Rheumatic Diseases</em>, vol. 75, no. 2, pp. 637–638, Jun.
 2016.</span></p>
 <p><span class="citation" data-cites="XXX-2016-7">R. Ljuhar, S. Nehrer,
-B. Norman, D. Ljuhar, T. Haftner, J. Hladůvka, M. B. T. Mai, H. Canhăo,
+B. Norman, D. Ljuhar, T. Haftner, J. Hladůvka, M. B. T. Mai, H. Canhão,
 J. C. Branco, A. Rodrigues, N. Gouveia, A. Fahrleitner-Pammer, and H. P.
 Dimai. A clinical study to examine thresholds of joint space width and
 joint space area for identification of knee osteoarthritis, <em>Annals
@@ -411,15 +411,15 @@ Rodrigues, N. Gouveia, S. Nehrer, A. Fahrleitner-Pammer, and H. P.
 Dimai. A novel method for the assessment of knee joint space width and
 subchondral bone micro architecture, <em>Osteoarthritis and
 Cartilage</em>, vol. 24, p. 397, Apr. 2016, DOI:<a
-href="https://doi.org/10.1016/j.joca.2016.01.677"
-role="doc-biblioref">10.1016/j.joca.2016.01.677</a>.</span></p>
+href="https://doi.org/10.1016/J.JOCA.2016.01.677"
+role="doc-biblioref">10.1016/J.JOCA.2016.01.677</a>.</span></p>
 <p><span class="citation" data-cites="XXX-2016-3">R. Ljuhar, B. Norman,
 D. Ljuhar, S. Nehrer, M. Riedl, J. Hladůvka, F. Stiassny, C. Wetzel, and
 C. Westhauser. Computer-assisted diagnosis and monitoring of
 degenerative bone diseases, <em>Osteoarthritis and Cartilage</em>, vol.
 24, p. 319, Apr. 2016, DOI:<a
-href="https://doi.org/10.1016/j.joca.2016.01.570"
-role="doc-biblioref">10.1016/j.joca.2016.01.570</a>.</span></p>
+href="https://doi.org/10.1016/J.JOCA.2016.01.570"
+role="doc-biblioref">10.1016/J.JOCA.2016.01.570</a>.</span></p>
 <p><span class="citation" data-cites="PB-VRVis-2014-032">A. Enkhbayar,
 B. Norman, R. Ljuhar, and J. Hladůvka. Automated <span>ROI</span>
 placement in high-resolution radiographs of calcaneus, in <em>Poster at
@@ -518,9 +518,11 @@ membrane-centric encoding using bit-flips, PRIP, TU Wien, PRIP-TR-154,
 <!-- @TR144 Edited seminar works  -->
 <p><span class="citation" data-cites="Hladuvka-2017-FemoralROIs">J.
 Hladůvka, B. T. M. Phuong, R. Ljuhar, D. Ljuhar, A. M. Rodrigues, J. C.
-Branco, and H. Canhão. <span class="nocase">Femoral ROIs and Entropy for
-Texture-based Detection of Osteoarthritis from High-Resolution Knee
-Radiographs</span>, <em>CoRR</em>, vol. abs/1703.09296, 2017.</span></p>
+Branco, and H. Canhão. Femoral ROIs and entropy for texture-based
+detection of osteoarthritis from high-resolution knee radiographs,
+<em>CoRR</em>, vol. abs/1703.09296, 2017, DOI:<a
+href="https://doi.org/10.48550/arXiv.1703.09296"
+role="doc-biblioref">10.48550/arXiv.1703.09296</a>.</span></p>
 <p><span class="citation" data-cites="Zambal-2008-TR015">S. Zambal, K.
 Bühler, and J. Hladůvka. Entropy-optimized texture models, VRVis,
 Donau-City-Strasse 1, A-1200 Vienna, Austria, TR-VRVis-2008-015, Mar.
