DGMM 24 with pagesand DOI

--- a/publications/index.html
+++ b/publications/index.html
@@ -166,7 +166,7 @@
 <body>
 <header id="title-block-header">
 <h1 class="title">Publications of Jiří Hladůvka</h1>
-<p class="date">updated on February 9, 2024</p>
+<p class="date">updated on April 10, 2024</p>
 </header>
 <!-- title and date will be produced by pandoc -->
 <h2 id="articles-in-journals">Articles in Journals</h2>
@@ -218,7 +218,9 @@ Conferences</h2>
 <p><span class="citation" data-cites="Hladuvka-2024-DGMM">J. Hladůvka
 and W. G. Kropatsch. Fitting egg-shapes to discretized object
 boundaries, in <em>Discrete geometry and mathematical morphology</em>,
-2024, pp. 1–13 (to appear).</span></p>
+2024, pp. 107–119, DOI:<a
+href="https://doi.org/10.1007/978-3-031-57793-2_9"
+role="doc-biblioref">10.1007/978-3-031-57793-2_9</a>.</span></p>
 <p><span class="citation" data-cites="Banaeyan-2022-SSPR">M. Banaeyan,
 C. Carratù, W. G. Kropatsch, and J. Hladůvka. Fast distance transforms
 in graphs and in <span>G</span>maps, in <em>IAPR joint international
